# ChangeLog for sys-apps/sysvinit
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/sysvinit/ChangeLog,v 1.12 2004/07/09 18:57:56 agriffis Exp $

*sysvinit-2.85-r1 (09 Jul 2004)

  09 Jul 2004; Aron Griffis <agriffis@gentoo.org> +sysvinit-2.85-r1.ebuild:
  Build sulogin in any case, since it's always possible to link against
  /lib/libcrypt.so even when the static lib is unavailable

  02 Jul 2004; Aron Griffis <agriffis@gentoo.org> sysvinit-2.84.ebuild,
  sysvinit-2.85.ebuild:
  Uncomment sed line for USE=build to keep compile from failing during
  stage-building

*sysvinit-2.85 (02 Jul 2004)

  02 Jul 2004; Chris PeBenito <pebenito@gentoo.org>
  +files/sysvinit-2.85-selinux.patch, +sysvinit-2.85.ebuild:
  Bump, along with new SELinux patch, from #55701.

  30 Jun 2004; Chris PeBenito <pebenito@gentoo.org> sysvinit-2.84.ebuild:
  Inherit eutils and fix SELinux patch versioning.

*sysvinit-2.84 (29 Jun 2004)

  29 Jun 2004; Aron Griffis <agriffis@gentoo.org> +files/inittab,
  +files/sysvinit-2.84-selinux.patch, +files/sysvinit-2.84-selinux1.patch,
  +sysvinit-2.84.ebuild:
  Update to version used in baselayout-1.10.1 in preparation for
  baselayout/sysvinit split

*sysvinit-2.83-r1 (09 Jul 2002)

  10 Feb 2003; Seemant Kulleen <seemant@gentoo.org> *.ebuild :

  Changed sed expression delimiter from / to :, closing bug #15006 by Blu3
  <david+gentoo.org@blue-labs.org>

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
  21 Jul 2002; Mark Guertin <gerk@gentoo.org>:
  updated keywords (ppc)

  09 Jul 2002; Daniel Ahlberg <aliz@gentoo.org> ChangeLog :

  Added ChangeLog.