@@ -1,9 +1,9 @@
-MD5 b4840ab8b3dd5f91c5f099f2a39e7058 sysvinit-2.85-r1.ebuild 2098
+MD5 206660d899a87d8757a64cee79faf3c7 sysvinit-2.85-r1.ebuild 2462
 MD5 b4bb9a9f021d054c5a35dd72ad80560c sysvinit-2.84.ebuild 1982
 MD5 552d4816eef9bc465ba9f8a918f80f26 sysvinit-2.83-r1.ebuild 1074
 MD5 424f29ad5a264970cd802f9ec91bad20 sysvinit-2.83.ebuild 1037
 MD5 2be68f04d6e2d2dac7c3e0d6f8f21324 sysvinit-2.85.ebuild 1861
-MD5 4a7bd0a5165061225b89318420aa1458 ChangeLog 1689
+MD5 6090569ccb4b12c5c268ea43b9559860 ChangeLog 1825
 MD5 9a09f8d531c582e78977dbfd96edc1f2 metadata.xml 164
 MD5 f3cc010ab25be0d757030537126157a8 files/digest-sysvinit-2.83-r1 64
 MD5 38c0059ecfaa1b09e59a75cc2780aa94 files/digest-sysvinit-2.85-r1 64
