@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/sysvinit
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/sysvinit/ChangeLog,v 1.12 2004/07/09 18:57:56 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/sysvinit/ChangeLog,v 1.13 2004/07/23 12:06:35 agriffis Exp $
+
+  23 Jul 2004; Aron Griffis <agriffis@gentoo.org> sysvinit-2.85-r1.ebuild:
+  Bring pkg_postinst over from pre-split baselayout ebuilds
 
 *sysvinit-2.85-r1 (09 Jul 2004)
 
